@@ -766,7 +766,7 @@
 	    <last_modification_time>Mon, 19 Apr 1999 16:04:15 GMT</last_modification_time>
 	  </signal>
 	  <label>Strongs</label>
-	  <icon>strongs2.xpm</icon>
+	  <icon>strongs.xpm</icon>
 	  <active>False</active>
 	</widget>
 
@@ -1064,7 +1064,7 @@ Revelation
 	<widget>
 	  <class>GtkViewport</class>
 	  <name>vpSearch</name>
-	  <width>234</width>
+	  <width>291</width>
 	  <shadow_type>GTK_SHADOW_IN</shadow_type>
 
 	  <widget>
@@ -1074,7 +1074,136 @@ Revelation
 	    <spacing>0</spacing>
 
 	    <widget>
-	      <class>Placeholder</class>
+	      <class>GtkVBox</class>
+	      <name>vbox44</name>
+	      <homogeneous>False</homogeneous>
+	      <spacing>0</spacing>
+	      <child>
+		<padding>0</padding>
+		<expand>True</expand>
+		<fill>True</fill>
+	      </child>
+
+	      <widget>
+		<class>GtkFrame</class>
+		<name>frame31</name>
+		<label_xalign>0</label_xalign>
+		<shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
+		<child>
+		  <padding>0</padding>
+		  <expand>True</expand>
+		  <fill>True</fill>
+		</child>
+
+		<widget>
+		  <class>GtkScrolledWindow</class>
+		  <name>scrolledwindow44</name>
+		  <hscrollbar_policy>GTK_POLICY_NEVER</hscrollbar_policy>
+		  <vscrollbar_policy>GTK_POLICY_ALWAYS</vscrollbar_policy>
+		  <hupdate_policy>GTK_UPDATE_CONTINUOUS</hupdate_policy>
+		  <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
+
+		  <widget>
+		    <class>GtkText</class>
+		    <name>text10</name>
+		    <can_focus>True</can_focus>
+		    <editable>False</editable>
+		    <text></text>
+		  </widget>
+		</widget>
+	      </widget>
+
+	      <widget>
+		<class>GtkFrame</class>
+		<name>frame32</name>
+		<label_xalign>0</label_xalign>
+		<shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
+		<child>
+		  <padding>0</padding>
+		  <expand>True</expand>
+		  <fill>True</fill>
+		</child>
+
+		<widget>
+		  <class>GtkScrolledWindow</class>
+		  <name>scrolledwindow45</name>
+		  <hscrollbar_policy>GTK_POLICY_ALWAYS</hscrollbar_policy>
+		  <vscrollbar_policy>GTK_POLICY_ALWAYS</vscrollbar_policy>
+		  <hupdate_policy>GTK_UPDATE_CONTINUOUS</hupdate_policy>
+		  <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
+
+		  <widget>
+		    <class>GtkCList</class>
+		    <name>clistSearchResults</name>
+		    <can_focus>True</can_focus>
+		    <signal>
+		      <name>select_row</name>
+		      <handler>on_clistSearchResults_select_row</handler>
+		      <last_modification_time>Sat, 03 Nov 2001 02:08:48 GMT</last_modification_time>
+		    </signal>
+		    <columns>2</columns>
+		    <column_widths>80,80</column_widths>
+		    <selection_mode>GTK_SELECTION_SINGLE</selection_mode>
+		    <show_titles>False</show_titles>
+		    <shadow_type>GTK_SHADOW_IN</shadow_type>
+
+		    <widget>
+		      <class>GtkLabel</class>
+		      <child_name>CList:title</child_name>
+		      <name>label178</name>
+		      <label>label178</label>
+		      <justify>GTK_JUSTIFY_CENTER</justify>
+		      <wrap>False</wrap>
+		      <xalign>0.5</xalign>
+		      <yalign>0.5</yalign>
+		      <xpad>0</xpad>
+		      <ypad>0</ypad>
+		    </widget>
+
+		    <widget>
+		      <class>GtkLabel</class>
+		      <child_name>CList:title</child_name>
+		      <name>label179</name>
+		      <label>label179</label>
+		      <justify>GTK_JUSTIFY_CENTER</justify>
+		      <wrap>False</wrap>
+		      <xalign>0.5</xalign>
+		      <yalign>0.5</yalign>
+		      <xpad>0</xpad>
+		      <ypad>0</ypad>
+		    </widget>
+		  </widget>
+		</widget>
+	      </widget>
+
+	      <widget>
+		<class>GtkFrame</class>
+		<name>frame33</name>
+		<label_xalign>0</label_xalign>
+		<shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
+		<child>
+		  <padding>0</padding>
+		  <expand>True</expand>
+		  <fill>True</fill>
+		</child>
+
+		<widget>
+		  <class>GtkScrolledWindow</class>
+		  <name>scrolledwindow43</name>
+		  <hscrollbar_policy>GTK_POLICY_NEVER</hscrollbar_policy>
+		  <vscrollbar_policy>GTK_POLICY_ALWAYS</vscrollbar_policy>
+		  <hupdate_policy>GTK_UPDATE_CONTINUOUS</hupdate_policy>
+		  <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
+
+		  <widget>
+		    <class>GtkText</class>
+		    <name>text9</name>
+		    <can_focus>True</can_focus>
+		    <editable>False</editable>
+		    <text></text>
+		  </widget>
+		</widget>
+	      </widget>
 	    </widget>
 	  </widget>
 	</widget>
